// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example tests > ADD_DAYS(TODAY(), 7) 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ 2013-01-28 │
└───┴────────────┘
"
`;

exports[`Example tests > ADD_HOURS(NOW(), 8) 1`] = `
"
┌───┬─────────────────────┐
│   │ A                   │
├───┼─────────────────────┤
│ 1 │ 2013-01-21 16:15:20 │
└───┴─────────────────────┘
"
`;

exports[`Example tests > DAY(TODAY()) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 21 │
└───┴────┘
"
`;

exports[`Example tests > HOUR(NOW()) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 8 │
└───┴───┘
"
`;

exports[`Example tests > MINUTE(NOW()) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 15 │
└───┴────┘
"
`;

exports[`Example tests > MONTH(TODAY()) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`Example tests > NOW() 1`] = `
"
┌───┬─────────────────────┐
│   │ A                   │
├───┼─────────────────────┤
│ 1 │ 2013-01-21 08:15:20 │
└───┴─────────────────────┘
"
`;

exports[`Example tests > SECOND(NOW()) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 20 │
└───┴────┘
"
`;

exports[`Example tests > SUB_DAYS(TODAY(), 7) 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ 2013-01-14 │
└───┴────────────┘
"
`;

exports[`Example tests > SUB_HOURS(NOW(), 8) 1`] = `
"
┌───┬─────────────────────┐
│   │ A                   │
├───┼─────────────────────┤
│ 1 │ 2013-01-21 00:15:20 │
└───┴─────────────────────┘
"
`;

exports[`Example tests > TIME() 1`] = `
"
┌───┬──────────┐
│   │ A        │
├───┼──────────┤
│ 1 │ 08:15:20 │
└───┴──────────┘
"
`;

exports[`Example tests > TODAY() 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ 2013-01-21 │
└───┴────────────┘
"
`;

exports[`Example tests > YEAR(TODAY()) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ 2013 │
└───┴──────┘
"
`;
